# zdaily-command

./: .gitignore  Cargo.toml
src/: main.rs  model.rs  opts.rs
