[package]
name = "zdaily-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
structopt = "0.3"
pretty_env_logger = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }